--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property": "*"
+    "@babel/plugin-proposal-private-property": "^"
   },
   "scripts": {
     "start": "react-scripts start",
